bitfields/tests/compile_error_cases/errors/bitfield_invalid_bitfield_default_value.rs
use bitfields::bitfield;

#[bitfield(u32, default = 123)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

#[bitfield(u32, default = invalid)]
pub struct Bitfield2 {
    #[bits(default = 0x12)]
    a: u32,
}

fn main() {}

