bitfields/tests/compile_error_cases/errors/bitfield_invalid_bitfield_default_value.stderr
error: Invalid value for boolean argument 'default'. Valid values are 'true' or 'false'
 --> tests/compile_error_cases/errors/bitfield_invalid_bitfield_default_value.rs:3:27
  |
3 | #[bitfield(u32, default = 123)]
  |                           ^^^

error: Invalid value for boolean argument 'default'. Valid values are 'true' or 'false'
 --> tests/compile_error_cases/errors/bitfield_invalid_bitfield_default_value.rs:9:27
  |
9 | #[bitfield(u32, default = invalid)]
  |                           ^^^^^^^
